--- a/templates/app/base.html
+++ b/templates/app/base.html
@@ -1,19 +1,48 @@
-{% extends 'app/bootstrap.html' %}
-
 {% load bootstrap4 %}
+{% load staticfiles %}
 
-{% block bootstrap4_content %}
+<!DOCTYPE html>
+
+{% block html %}
+<html lang="es">
+
+{% block head %}
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="ENREDA COOPERATIVA">
+
+  <title> {% block title %}{% endblock title %}</title>
+  <link rel="icon" href="{% static 'img/favicon.png' %}">  
+  <!-- Bootstrap core CSS -->
+  {% bootstrap_css %}
+
+  <!-- Custom fonts -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.0/css/all.css" integrity="sha384-Mmxa0mLqhmOeaE8vgOSbKacftZcsNYDjQzuCOm6D02luYSzBG8vpaOykv9lFQ51Y" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+
+
+  <!-- Custom styles -->
+  <link href="{% static 'css/styles.css' %}" rel="stylesheet">
+
+</head>
+{% endblock %}
+
+<body>
+
     <div class="container">
-        <h1>{% block title %}(no title){% endblock %}</h1>
-
-        <p>
-            <a href="{% url 'index' %}">home</a>
-           
-        </p>
-
-        {% autoescape off %}{% bootstrap_messages %}{% endautoescape %}
-
+        <div class="col-12">
+            <h1>Q-Learning</h1>
+        </div>
+        {% include 'app/_navbar.html' %}
         {% block content %}(no content){% endblock %}
     </div>
+
+</body>
+
+  {% bootstrap_javascript jquery='full' %}
+  <script src="{% static 'js/main.js' %}"></script>
 
 {% endblock %}
