--- a/templates/app/_footer.html
+++ b/templates/app/_footer.html
@@ -6,7 +6,7 @@
         <br>
         <a href="aviso-legal" target="_blank">Aviso legal</a>
         &bullet;
-        <a href="accesibilidad" target="_blank">Accesibilidad</a>
+        <a href="accesibilidad" target="_blank">Instrucciones</a>
         &bullet;
         <a href="creditos" target="_blank">Cŕeditos</a>
     </div>
