--- a/templates/app/base.html
+++ b/templates/app/base.html
@@ -44,5 +44,6 @@
 
   {% bootstrap_javascript jquery='full' %}
   <script src="{% static 'js/main.js' %}"></script>
+  <script src="{% static 'js/create_map.js' %}"></script>
 
 {% endblock %}
