--- a/templates/app/_navbar.html
+++ b/templates/app/_navbar.html
@@ -4,8 +4,9 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-        <a class="nav-item nav-link active" href="{% url 'index' %}">Iniciar <span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link" href="#">Personalizar mapa</a>
+        <a class="nav-item nav-link active" href="{% url 'index' %}">Mapa del problema</a>
+        <a class="nav-item nav-link" href="{% url 'create_map' %}">Crear mapa</a>
+        <a class="nav-item nav-link" href="#">Instrucciones</a>
         </div>
     </div>
 </nav>
