Updated create map

--- a/templates/app/create_map.html
+++ b/templates/app/create_map.html
@@ -111,7 +111,11 @@
 
             </div>
 
-
+            <form method="post">{% csrf_token %}
+                {{ form.as_p }}
+                <input type="submit" value="Send message">
+            </form>
+            
             <div class="wrapper-button text-center">
                     <a href="#" id="finish-map" class="button-primary">
                         <i class="fas fa-check"></i> Resolver mapa
