--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -18,6 +18,7 @@
     08. Footer
     09. Badge
     10. Form
+    11. Blocks
 
  
 ---------------------------------------------------------------- */
@@ -52,6 +53,10 @@ h1 {
     color: var(--primary);
     padding: 60px 0px;
 }
+h2.title {
+    font-size: 40px;
+    color: var(--primary);
+}
 
 /* ----------------------------------------------------------------
 	[ 01. Navbar ]
@@ -63,12 +68,27 @@ nav {
 nav .nav-item {
     color: var(--light);
     cursor: pointer;
+    vertical-align: middle;
+    border-right: 1px solid var(--dark);
+    padding-right: 15px !important;
+    padding-left: 15px !important;
 }
+    nav .nav-item:last-child {
+        border-right: none;
+    }
 nav .nav-item:hover {
     background: var(--light);
     color: var(--primary);
 }
-
+.instruction-nav a {
+    display: block;
+    color: var(--light);
+    margin-bottom: 5px;
+}
+    .instruction-nav a:hover {
+        color: var(--gray);
+        text-decoration: none;
+    }
 /* ----------------------------------------------------------------
 	[ 02. Loader ]
 -----------------------------------------------------------------*/
@@ -311,6 +331,9 @@ table.create-map td {
 .mt-60 {
     margin-top: 60px;
 }
+.mt-110 {
+    margin-top: 110px !important;
+}
 
 /* ----------------------------------------------------------------
 	[ 05. Animations ]
@@ -472,3 +495,29 @@ footer {
 #form-create-map {
     display: none;
 }
+
+
+/* ----------------------------------------------------------------
+	[ 11. Blocks ]
+-----------------------------------------------------------------*/
+.block-instruction {
+    padding: 50px;
+    margin: 60px 0px;
+    background: #FFFFFF;
+    border-radius: 6px;
+}
+    .block-instruction h3 {
+        margin-bottom: 30px;
+        padding-bottom: 15px;
+        border-bottom: 1px solid var(--shadow);
+    }
+    .block-instruction h4 {
+        font-size: 20px;
+        margin-top: 35px;
+    }
+    .block-instruction img {
+        width: 100%;
+        margin: 0 auto;
+        box-shadow: 0px 4px 16px var(--shadow);
+        margin: 30px 0px;
+    }
