--- a/templates/app/_navbar.html
+++ b/templates/app/_navbar.html
@@ -4,10 +4,10 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-        <a class="nav-item nav-link active" href="{% url 'index' %}">Mapa del problema</a>
-        <a class="nav-item nav-link" href="{% url 'create_map' %}">Crear mapa</a>
-        <a class="nav-item nav-link" href="{% url 'create_problem' %}">Crear problema</a>
-        <a class="nav-item nav-link" href="#">Instrucciones</a>
+            <a class="nav-item nav-link active" href="{% url 'index' %}">Instrucciones</a>
+            <a class="nav-item nav-link" href="{% url 'index' %}">Mapa del problema</a>
+            <a class="nav-item nav-link" href="{% url 'create_map' %}">Crear mapa</a>
+            <a class="nav-item nav-link" href="{% url 'create_problem' %}">Crear problema</a>
         </div>
     </div>
 </nav>
