--- a/templates/app/create_map.html
+++ b/templates/app/create_map.html
@@ -118,7 +118,7 @@
             
             <div class="wrapper-button text-center">
                 <a href="#" id="finish-map" class="button-primary">
-                    <i class="fas fa-check"></i> Resolver mapa
+                    <i class="fas fa-save"></i> Guardar mapa
                 </a>
             </div>
 
