--- a/templates/app/_loader.html
+++ b/templates/app/_loader.html
@@ -1,4 +1,4 @@
-<div class="wrapper-loader">
+<div class="wrapper-loader show">
     <div class="loader">
         <div class="loader-inner">
             <div class="loading one"></div>
