--- a/templates/app/home.html
+++ b/templates/app/home.html
@@ -178,27 +178,27 @@
 
         </div>
         <div class="col-4 mt-60">
-                <div class="wrapper-panel-sticky mt-110">
-                    <div id="result-panel" class="wrapper-panel">
-                        <h2 class="panel-title">Puntos</h2>
-                        <div class="panel-body">
-                            <div class="block instruction-nav">
-                                <a href="#secciones">Secciones de la aplicación</a>
-                                <a href="#mapa-problema">Mapa del problema</a>
-                                <a href="#crear-mapa">Crear mapa</a>
-                                <a href="#crear-problema">Crear problema</a>
-                            </div>
+            <div class="wrapper-panel-sticky mt-110">
+                <div id="result-panel" class="wrapper-panel">
+                    <h2 class="panel-title">Guía</h2>
+                    <div class="panel-body">
+                        <div class="block instruction-nav">
+                            <a href="#secciones">Secciones de la aplicación</a>
+                            <a href="#mapa-problema">Mapa del problema</a>
+                            <a href="#crear-mapa">Crear mapa</a>
+                            <a href="#crear-problema">Crear problema</a>
                         </div>
                     </div>
-                    <div class="wrapper-button text-right">
-                        <a href="#" class="button-top">
-                            <i class="fas fa-chevron-up"></i>
-                        </a>
-                    </div>
-                    {% include 'app/_footer.html' %}
                 </div>
-                
+                <div class="wrapper-button text-right">
+                    <a href="#" class="button-top">
+                        <i class="fas fa-chevron-up"></i>
+                    </a>
+                </div>
+                {% include 'app/_footer.html' %}
             </div>
+            
+        </div>
     </div>
 
 {% endblock %}
