--- a/templates/app/_navbar.html
+++ b/templates/app/_navbar.html
@@ -5,9 +5,9 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
             <a class="nav-item nav-link active" href="{% url 'index' %}">Instrucciones</a>
-            <a class="nav-item nav-link" href="{% url 'index' %}">Mapa del problema</a>
             <a class="nav-item nav-link" href="{% url 'create_map' %}">Crear mapa</a>
             <a class="nav-item nav-link" href="{% url 'create_problem' %}">Crear problema</a>
+            <a class="nav-item nav-link" href="{% url 'results-list' %}">Resultados</a>
         </div>
     </div>
 </nav>
