--- a/templates/app/results.html
+++ b/templates/app/results.html
@@ -7,32 +7,43 @@
 {% block content %}
 
 {% include 'app/_loader.html' %}
-    <table class="table">
-        <thead>
-            <tr>
-                <th scope="col">#</th>
-                <th scope="col">Nombre del mapa</th>
-                <th scope="col">Épocas</th>
-                <th scope="col">gamma</th>
-                <th scope="col">alpha</th>
-                <th scope="col">Pasos</th>
-                <th scope="col">Recompensa</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for result in object_list %}
-                <tr>
-                    <th scope="row"><a href="{% url 'result-detail' result.id %}">{{result.id}}</a></th>
-                    <td>{{result.problem.map_related.name}}</td>
-                    <td>{{result.problem.epochs}}</td>
-                    <td>{{result.problem.gamma}}</td>
-                    <td>{{result.problem.alpha}}</td>
-                    <td>{{result.steps}}</td>
-                    <td>{{result.reward}}</td>
-                </tr>
-            {% empty %}
-                <p>Aún no hay resultados.</p>
-            {% endfor %}
-        </tbody>
-    </table>
+<div class="row">
+    <div class="col-12 mt-60">
+        
+        <h2 class="title">Resultados</h2>
+
+        <div class="block-instruction p-20 mt-20">
+            <table class="table results">
+                <thead>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Nombre del mapa</th>
+                        <th scope="col">Épocas</th>
+                        <th scope="col">gamma</th>
+                        <th scope="col">alpha</th>
+                        <th scope="col">Pasos</th>
+                        <th scope="col">Recompensa</th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for result in object_list %}
+                        <tr>
+                            <th scope="row">{{result.id}}</th>
+                            <td>{{result.problem.map_related.name}}</td>
+                            <td>{{result.problem.epochs}}</td>
+                            <td>{{result.problem.gamma}}</td>
+                            <td>{{result.problem.alpha}}</td>
+                            <td>{{result.steps}}</td>
+                            <td>{{result.reward}}</td>
+                            <td><a class="button-top" href="{% url 'result-detail' result.id %}"><i class="fas fa-eye"></i></a></td>
+                        </tr>
+                    {% empty %}
+                        <p>Aún no hay resultados.</p>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
 {% endblock %}
